# advent-of-code-2024

./: README.md
01/: README.md  main.py  pyproject.toml
01/utils/: resolvers.py
02/: README.md  main.py  pyproject.toml
02/utils/: resolvers.py
03/: README.md  main.py  pyproject.toml
03/utils/: resolvers.py
04/: README.md  main.py  pyproject.toml
04/utils/: resolvers.py
05/: README.md  main.py  pyproject.toml
05/utils/: resolvers.py
06/: README.md  main.py  pyproject.toml
06/utils/: resolvers.py
07/: README.md  main.py  pyproject.toml
07/utils/: resolvers.py
08/: README.md  main.py  pyproject.toml
08/utils/: resolvers.py
09/: README.md  main.py  pyproject.toml
09/utils/: resolvers.py
10/: README.md  main.py  pyproject.toml
10/utils/: resolvers.py
11/: README.md  main.py  pyproject.toml
11/utils/: resolvers.py
12/: README.md  main.py  pyproject.toml
12/utils/: resolvers.py
13/: README.md  main.py  pyproject.toml
13/utils/: resolvers.py
14/: README.md  main.py  pyproject.toml
14/utils/: resolvers.py
15/: README.md  main.py  pyproject.toml
15/utils/: resolvers.py
16/: README.md  main.py  pyproject.toml
16/utils/: resolvers.py
17/: README.md  main.py  pyproject.toml
18/: README.md  main.py  pyproject.toml
19/: README.md  main.py  pyproject.toml
20/: README.md  main.py  pyproject.toml
21/: README.md  main.py  pyproject.toml
22/: README.md  main.py  pyproject.toml
23/: README.md  main.py  pyproject.toml
24/: README.md  main.py  pyproject.toml
25/: README.md  main.py  pyproject.toml
(+10 files in other folders)
